Version 0.2.0  (2021-12-22)
- Cleanup API, reduce visibility

Version 0.1.2  (2021-12-21)
- Rotate device identifier

Version 0.1.1  (2021-12-21)
- Remove unnecessary async
- Removed unused helper
- Add interface_id to identifiers in device_info

Version 0.1.0  (2021-12-20)
- Bump version to 0.1.0
- Remove interface_id from get_entity_name and get_custom_entity_name
- Add initial test
- Add coverage config

Version 0.0.22 (2021-12-16)
- Resolve names without interface
- Fix device.entities for virtual remotes
- Remove unused const
- Cache model and primary_client

Version 0.0.21 (2021-12-15)
- Fix number set_state
- Update ignore list
- Fix select entity

Version 0.0.20 (2021-12-14)
- Move caches to classes

Version 0.0.19 (2021-12-12)
- Add helper for address
- Fixes for Hub init

Version 0.0.18 (2021-12-11)
- Add type hints based on HA coding guidelines
- Rename device_description to entity_definition
- Send alarm event on value change
- Rename impulse to special events
- reduce event_callbacks

Version 0.0.17 (2021-12-05)
- Remove variables that are covered by other sensors (CCU only)
- Remove dummy from service message (HmIP-RF always sends 0001D3C98DD4B6:3 unreach)
- Rename Bidcos thermostats to SimpleRfThermostat and RfThermostat
- Use more Enums (like HA does): HmPlatform, HmEventType
- Use assignment expressions
- Add more type hints (fix most mypy errors)

Version 0.0.16 (2021-12-02)
- Don't use default entities for climate groups (already included in device)

Version 0.0.15 (2021-12-01)
- Fix: remove wildcard for HmIP-STHD
- Add unit to hub entities

Version 0.0.14 (2021-11-30)
- Add KeyMatic
- Add HmIP-MOD-OC8
- Add HmIP-PCBS, HmIP-PCBS2, HmIP-PCBS-BAT, HmIP-USBSM
- Remove xmlrpc calls related to ccu system variables (not supported by api)
- Update hub sensor excludes

Version 0.0.13 (2021-11-29)
- Add HmIP-MOD-HO, HmIP-MOD-TM
- Add sub_type to device/entity
- Add PRESET_NONE to climate
- Add level und state as additional entities for climate
