@@ -1,5 +1,6 @@
 Version 0.2.0  (2021-12-22)
 - Cleanup API, reduce visibility
+- Add setValue to client
 
 Version 0.1.2  (2021-12-21)
 - Rotate device identifier
